Fix responsive pager horizontal scrolling bug

--- a/styles/web/type-bootstrap.less
+++ b/styles/web/type-bootstrap.less
@@ -3131,7 +3131,6 @@ td.k-state-focused.k-state-selected,
         .k-pager-wrap .k-pager-nav,
         .k-pager-input
         {
-            float:none;
             display: inline-block;
             vertical-align: top;
         }
@@ -3145,12 +3144,17 @@ td.k-state-focused.k-state-selected,
             display: inline-flex;
             -webkit-flex-direction: column-reverse;
             flex-direction: column-reverse;
-            -webkit-transform: translatey(-100%);
-            -moz-transform: translatey(-100%);
-            transform: translatey(-100%);
             margin-left: .3em;
             overflow: visible;
             height: auto;
+        }
+
+        .k-pager-numbers.k-state-expanded,
+        .k-grid .k-pager-numbers.k-state-expanded
+        {
+            -webkit-transform: translatey(-100%);
+            -moz-transform: translatey(-100%);
+            transform: translatey(-100%);
         }
         
         .km-pane-wrapper .k-pager-numbers .k-link,
